Fix alignment on Home page Large desktop

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -151,7 +151,7 @@ body {
       
       .main {
           width: 100vw;
-          
+          margin-left: -7px;
           
           &__titlecontainer {
               background-position-y: 40%;
